<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgtound_gree"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustResize"
    tools:context=".CreateClienteaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        android:background="@drawable/side_nav_bar"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/lblClientRegis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registrar Cliente"
                        android:textAlignment="center"
                        android:textColor="@color/celeste"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cardCornerRadius="25dp"
                        android:layout_gravity="center"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/photouser"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/agregar" />
                    </androidx.cardview.widget.CardView>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtNomCliente">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nombreCliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtDNICliente">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dniclienta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtDireccionCliente">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/direccioncliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <Spinner
                        android:id="@+id/spinergenero"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_spinner_background" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtTelefCliente">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/Telefonocliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtCliemailente">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailncliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <Spinner

                        android:id="@+id/spinertipocliente"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_spinner_background" />

                    <!-- Fecha de Creación -->
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtFechaCreacCliente">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fechacreacioncliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:focusable="false"
                            android:clickable="true"
                            android:focusableInTouchMode="false" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtEdadCliente">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edadcliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Agregar más campos de entrada según sea necesario -->

                    <Button
                        android:id="@+id/btn_addCliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/celeste"
                        android:text="Registrar Cliente"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green"
                        android:visibility="gone" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
