<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgtound_gree"
    tools:context=".CreatePeoveedorActivity"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustResize">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/lblClientRegis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registrar Proveedor"
                        android:textAlignment="center"
                        android:textColor="@color/celeste"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardCornerRadius="25dp"
                        android:layout_gravity="center"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/photouser"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/prove" />
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/txtNomProveedor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nombreproveedor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinnerdepartamentoProveedor"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_spinner_background" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtDireccion">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/direccionproveedor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtTelefonoProveedor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/Telefonoprov"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:hint="@string/txtEmail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailprov"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Agregar más campos de entrada según sea necesario -->

                    <Button
                        android:id="@+id/btn_addProveedor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/celeste"
                        android:text="Registrar Proveedor"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green"
                        android:visibility="gone"
                        android:layout_marginTop="16dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
